--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,17 +1,14 @@
-name: Build, Push, and Update GitOps
+name: Build and Scan
 
 on:
-  pull_request:
-    branches: [ "main" ]
-    types: [opened, synchronize, reopened]
-env:
+  push:
+    branches: [ "dev" ]
 
+env:
   IMAGE_NAME: auth-service
   GCP_PROJECT_ID: personal-473312
-  GCP_ARTIFACT_LOCATION: us-central1
+  ZONE: us-central1
   GCP_REPO_NAME: microservice
-
-
 
 jobs:
   build-and-deploy:
@@ -21,13 +18,21 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
+      - name: Set Global Variables
+        run: |
+          echo "REPO=${{ .env.ZONE }}-docker.pkg.dev" >> $GITHUB_ENV
+          echo "IMAGE=${{ .env.REPO }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPO_NAME }}/${{ env.IMAGE_NAME }}" >> $GITHUB_ENV
+          echo "TAG=${{ github.run_number }}" >> $GITHUB_ENV
+
       - name: Build 
         run: |
-          IMAGE="${{ env.GCP_ARTIFACT_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPO_NAME }}/${{ env.IMAGE_NAME }}"
-          TAG=${{ github.run_number }}
-          docker build -t $IMAGE:$TAG .
+          docker build -t ${{ env.IMAGE }}:${{ env.TAG }} .
           docker images
-# docker push $IMAGE:$TAG
-# echo "NEW_TAG=$TAG" >> $GITHUB_ENV
-# echo "IMAGE=$IMAGE" >> $GITHUB_ENV
 
+      - name: Install Trivy
+        run: |
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
+
+      - name: Test Trivy
+        run: |
+          trivy image --severity MEDIUM,HIGH,CRITICAL --exit-code 1 --format json ${{ env.IMAGE }}:${{ env.TAG }}
