removed trivy json

--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Test Trivy
         run: |
-          trivy image --severity MEDIUM,HIGH,CRITICAL --exit-code 1 --format json ${{ env.IMAGE }}:${{ env.TAG }}
+          trivy image --severity MEDIUM,HIGH,CRITICAL --exit-code 1 ${{ env.IMAGE }}:${{ env.TAG }}
 
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v2
