--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -9,9 +9,11 @@ env:
   GCP_PROJECT_ID: personal-473312
   ZONE: us-central1
   GCP_REPO_NAME: microservice
+  GITOPS_REPO: ZaidAfane3/todo-infra
+  GITOPS_PATH: todo-auth
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
@@ -44,8 +46,33 @@ jobs:
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker ${{ env.REPO }} --quiet
 
-
-
       - name: Push to GCP
         run: |
           docker push ${{ env.IMAGE }}:${{ env.TAG }}
+
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout GitOps repo
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ env.GITOPS_REPO }}
+          token: ${{ secrets.GH_PAT }}
+          path: gitops
+
+      - name: Update GitOps
+        env:
+          IMAGE: "${{ env.ZONE }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPO_NAME }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}"
+          GIT_AUTHOR_NAME: ${{ github.actor }}
+          GIT_AUTHOR_EMAIL: ${{ github.event.head_commit.author.email }}
+          GITOPS_PATH: ${{ env.GITOPS_PATH }}
+        run: |
+          cd gitops
+          ls
+          pwd
+          sed -i "s|^\( *image: \).*|\1${IMAGE}|" ./k8s/todo/${GITOPS_PATH}/deployment.yaml
+          git config user.name "${GIT_AUTHOR_NAME}"
+          git config user.email "${GIT_AUTHOR_EMAIL}"
+          git commit -am "Update image to ${IMAGE} from run #${{ github.run_number }}"
+          git push origin main
